# concordance

./: .gitignore  Cargo.toml  LICENSE  NOTICE  README.md  flake.nix
docs/: getting-started-with-claude.md  mcp-tool-surface.md
docs/upstream/: README.md  proposals-openapi.yaml  voting-v1-openapi.yaml
perSystem/: devShells.nix  formatter.nix  packages.nix
scripts/: probe-auth.sh
src/: api.rs  auth.rs  client.rs  error.rs  identity.rs  lib.rs  main.rs  mcp.rs  render.rs  store.rs
src/auth/: login.rs  login_page.html  login_page_stub.html  mod.rs
src/proposal/: mod.rs  parser.rs  payload.rs  types.rs
tests/: auth_login_session_smoke.rs  auth_login_smoke.rs  integration.rs  mcp_smoke.rs  properties.rs
