[package]
name = "concordance"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "LLM-mediated client for the Ekklesia governance API (Cardano Hydra-Voting)."

[[bin]]
name = "concordance"
path = "src/main.rs"

[dependencies]
anyhow = "1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
dirs = "5"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "rustls-tls",
  "cookies",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sled = "0.34"
thiserror = "2"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
proptest = "1"
tempfile = "3"
